Fix .bi- background bleed

--- a/app/views/diary/_entry.scss
+++ b/app/views/diary/_entry.scss
@@ -121,7 +121,7 @@ article.diary {
 
                 &::before {
                     background: #fff;
-                    border-radius: 100%;
+                    clip-path: circle(calc(50% - 1px));
                 }
             }
 
@@ -130,7 +130,7 @@ article.diary {
 
                 &::before {
                     background: #fff;
-                    border-radius: 100%;
+                    clip-path: circle(calc(50% - 1px));
                 }
             }
         }
